@@ -4,7 +4,7 @@
 
 QDISC_KIND=' choke codel bfifo pfifo pfifo_head_drop fq fq_codel gred hhf \
             mqprio multiq netem pfifo_fast pie fq_pie red rr sfb sfq tbf atm \
-            cbq drr dsmark hfsc htb prio qfq '
+            cbq drr dsmark hfsc htb prio qfq jens '
 FILTER_KIND=' basic bpf cgroup flow flower fw route rsvp tcindex u32 matchall '
 ACTION_KIND=' gact mirred bpf sample '
 
@@ -299,6 +299,11 @@ _tc_qdisc_options()
             _tc_once_attr 'limit flows target interval quantum \
                 ce_threshold memory_limit drop_batch'
             _tc_one_of_list 'ecn noecn'
+            return 0
+            ;;
+        jens)
+            _tc_once_attr 'limit flows target interval quantum \
+                ce_threshold memory_limit drop_batch'
             return 0
             ;;
         gred)
