@@ -69,6 +69,7 @@ TCMODULES += em_meta.o
 TCMODULES += q_mqprio.o
 TCMODULES += q_codel.o
 TCMODULES += q_fq_codel.o
+TCMODULES += q_jens.o
 TCMODULES += q_fq.o
 TCMODULES += q_pie.o
 TCMODULES += q_fq_pie.o
